--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ CLOUD_API_KEY=463372638381351
 CLOUD_API_SECRET=mlhuzwpwwFp0V7YFFxtk2K245tg
 
 ATLAS_DB_URL=mongodb+srv://harshyadav:Harsh%402312@cluster0.kzhaknq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET=fbljdfbngnskmvso
